--- a/mlops_model_api/docker-compose.yml
+++ b/mlops_model_api/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   mlflow-model-api:
-    build: .
+    build: ..
     container_name: mlflow-model-api
     ports:
       - "5000:5000"
