--- a/training_pipeline/Dockerfile
+++ b/training_pipeline/Dockerfile
@@ -1,4 +1,11 @@
-FROM ubuntu:latest
-LABEL authors="FPT SHOP"
+FROM python:3.12-slim
 
-ENTRYPOINT ["top", "-b"]
+WORKDIR /app
+
+COPY . .
+
+RUN pip install --no-cache-dir mlflow xgboost scikit-learn pandas
+
+EXPOSE 5000
+
+CMD ["mlflow", "server", "--backend-store-uri", "file:/app/mlruns", "--default-artifact-root", "/app/mlartifacts", "--host", "0.0.0.0", "--port", "5000"]
