--- a/monitoring/promtail-config.yaml
+++ b/monitoring/promtail-config.yaml
@@ -9,10 +9,31 @@ clients:
   - url: http://loki:3100/loki/api/v1/push
 
 scrape_configs:
-- job_name: system
-  static_configs:
-  - targets:
-      - localhost
-    labels:
-      job: varlogs
-      __path__: /var/log/*log
+  - job_name: system
+    static_configs:
+    - targets:
+        - localhost
+      labels:
+        job: varlogs
+        __path__: /var/log/*log
+
+  - job_name: docker
+    static_configs:
+    - targets:
+        - localhost
+      labels:
+        job: docker
+        __path__: /var/lib/docker/containers/*/*-json.log
+        __path__regex__: true
+
+  - job_name: model_api
+    static_configs:
+      - targets:
+          - localhost
+        labels:
+          job: model_api
+          __path__: /var/log/app/*.log
+
+    pipeline_stages:
+      - output:
+          source: log
