--- a/training_pipeline/Dockerfile
+++ b/training_pipeline/Dockerfile
@@ -4,7 +4,9 @@ WORKDIR /app
 
 COPY . .
 
-RUN pip install --no-cache-dir mlflow xgboost scikit-learn pandas
+#RUN #pip install --no-cache-dir mlflow xgboost scikit-learn pandas
+
+RUN pip install --no-cache-dir mlflow xgboost
 
 EXPOSE 5000
 
